# reqcheck

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: good_requirement.json  sample_requirement.json
src/reqcheck/: __init__.py  api.py  cli.py
src/reqcheck/analyzers/: __init__.py  ambiguity.py  async_analyzers.py  base.py  completeness.py  risk.py  testability.py
src/reqcheck/core/: __init__.py  analysis_common.py  analyzer.py  async_analyzer.py  config.py  constants.py  exceptions.py  logging.py  models.py  observability.py  scoring.py
src/reqcheck/llm/: __init__.py  async_client.py  cache.py  circuit_breaker.py  client.py  prompts.py  providers.py  usage.py
src/reqcheck/output/: __init__.py  formatters.py
src/reqcheck/rules/: __init__.py  patterns.py
tests/: __init__.py  test_analyzer.py  test_analyzers.py  test_api.py  test_async_analyzer.py  test_custom_patterns.py  test_llm_client.py  test_providers.py
