[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reqcheck"
version = "0.1.0"
description = "AI-powered requirements quality checker for user stories, tickets, and specifications"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "reqcheck" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "rich>=13.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
]

[project.scripts]
reqcheck = "reqcheck.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reqcheck"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
